# tardigradas

./: .gitignore  README.md  pyproject.toml
.memory_bank/documents/: activeTask.md  architecture.md  progress.md  project-analysis.md  projectStructure.md
benchmarks/: __init__.py  _paths.py  common.py  mnist_helpers.py  problems.py  run_ackley.py  run_mnist.py  run_onemax.py  run_rastrigin.py  run_rosenbrock.py  run_royal_road.py  run_sphere.py
src/tardigradas/: __init__.py  crossover_policy.py  engine.py  exceptions.py  gen_types.py  individual.py  problem.py  progress_panel.py  schema.py  serialization.py
src/tardigradas/operators/: __init__.py  crossover.py  mutation.py  selection.py
tests/: __init__.py  conftest.py  helpers.py  mnist_helpers.py  test_benchmarks_common.py  test_crossover.py  test_crossover_policy.py  test_engine_benchmarks.py  test_engine_core.py  test_engine_loop.py  test_engine_mnist_benchmark.py  test_engine_smoke.py  test_individual.py  test_mutation.py  test_problem.py  test_progress_panel.py  test_schema.py  test_selection.py  test_serialization.py
