[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tardigradas"
version = "0.1.0"
description = "Compact genetic algorithm library for optimization tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]