[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tardigradas"
version = "0.1.0"
description = "Compact genetic algorithm library for optimization tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.8",
]
test = [
    "pytest>=9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "slow: marks long-running benchmark-style tests",
    "gpu: marks tests that expect a CUDA-capable device",
]